# random-voter

./: README.md  cabal.project  flake.nix
assets/V3/: randomVoteCC.plutus  randomVoter.plutus
data/: always-true.plutus
local-testnet/scripts/babbage/: conway-babbage-test-genesis.json  mkfiles.sh
nix/: project.nix  shell.nix
plutus-scripts/: plutus-scripts.cabal
plutus-scripts/exe/: Main.hs  Scripts.hs
plutus-scripts/src/: Scripts.hs
plutus-vrf/: plutus-vrf.cabal
plutus-vrf/src/Plutus/Crypto/: VRF.hs
random-voter-cli/: random-voter-cli.cabal
random-voter-cli/src/: Commands.hs  Main.hs  Options.hs
random-voter-cli/src/Commands/: GenerateScript.hs  GenerateVRFKeyPair.hs  GenerateVRFOutput.hs
