cabal-version: 3.0
name:          plutus-scripts
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:
  "Plutus scripts that implements a Cardano governance voter (CC or DREP) that deterministically randomly votes on a given governance actions."

build-type:    Simple

library
  default-language: Haskell2010
  exposed-modules:
    Scripts
    Shared

  hs-source-dirs:   src
  build-depends:
    , aeson
    , base >=4.2 && <5
    , bytestring
    , cardano-api ^>=8.48.0.0
    , plutus-core ^>=1.30
    , plutus-ledger-api ^>=1.30
    , plutus-tx ^>=1.30
    , plutus-tx-plugin ^>=1.30
    , plutus-vrf
    , serialise
