cabal-version: 3.0
name:          plutus-vrf
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:      "A plutus implementation of the a VRF."
build-type:    Simple

library
  exposed-modules:  Plutus.Crypto.VRF
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
    , base >=4.2 && <5
    , bytestring
    , plutus-core ^>=1.30
    , plutus-ledger-api ^>=1.30
    , plutus-tx ^>=1.30
    , plutus-tx-plugin ^>=1.30
