cabal-version: 3.0
name:          random-voter-cli
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:
  "A cli for generating VRF keys and proofs for using the random voter"

build-type:    Simple

executable random-voter-cli
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Commands
    Commands.GenerateScript
    Commands.GenerateVRFKeyPair
    Commands.GenerateVRFOutput
    Options
    Paths_random_voter_cli

  build-depends:
    , aeson
    , aeson-pretty
    , base >=4.2 && <5
    , base16
    , binary
    , bytestring
    , cardano-api ^>=8.48.0.0
    , cryptonite
    , directory
    , filepath
    , optparse-applicative
    , plutus-ledger-api ^>=1.30
    , plutus-tx ^>=1.30
    , plutus-vrf
    , text
